# spb_base

./: docker-compose.yml  pyproject.toml
docker/testrunner/: Dockerfile
docker/web/: Dockerfile
src/spb_base/: main.py
src/spb_base/dependencies/: repositories.py  services.py
src/spb_base/repositories/: item_repository.py
src/spb_base/routers/: item.py
src/spb_base/services/: item_service.py
tests/: conftest.py  test_api.py  test_item.py  test_repository.py  test_service.py
